welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: '(' expected but identifier found.
	if versLAvant = true;{
           ^Program:4: error: illegal start of simple expression
	if versLAvant = true;{
                            ^Program:9: error: ';' expected but 'else' found.
	else{
        ^